tests/c/internal/negative_case/bad_block_scope_static_function_decl.c
// Expected: compile fail (block-scope static object has incomplete type)
struct LocalTag;

int main(void) {
  static struct LocalTag x;
  return 0;
}
